# FMInventor

./: .gitignore  CMakeLists.txt  FMAnalysisData.qrc  PreviewController.cpp  PreviewController.h  Signal.h  SineGenerator.cpp  SineGenerator.h  SineSource.cpp  SineSource.h  main.cpp  testaudiooutput.cpp
qml/: MainWindow.qml
